[package]
name = "wsio-server"
version = "0.12.4"

authors.workspace = true
categories.workspace = true
description = "Event-driven WebSocket server for ws.io with namespaces and room broadcasting."
edition.workspace = true
homepage.workspace = true
include = [
  "Cargo.toml",
  "README.md",
  "src/**/*",
]

keywords.workspace = true
license.workspace = true
readme = "./README.md"
repository.workspace = true

# Optional package metadata
# rust-version.workspace = true
# documentation = "https://docs.rs/crate-name"
# exclude = []
# publish = true
# build = "build.rs"
# links = "native-library-name"

# Optional cargo metadata
# [package.metadata]

# Optional lint configuration
# [lints]
# workspace = true

# Features
[features]
## Default, aliases, and feature groups
default = []
all = [
  "connection-extensions",
  "packet-codec-cbor",
  "packet-codec-msgpack",
  "packet-codec-postcard",
  "packet-codec-sonic-rs",
  "tower",
]

full = ["all"]

## Feature flags
connection-extensions = []
packet-codec-cbor = ["wsio-core/packet-codec-cbor"]
packet-codec-msgpack = ["wsio-core/packet-codec-msgpack"]
packet-codec-postcard = ["wsio-core/packet-codec-postcard"]
packet-codec-sonic-rs = ["wsio-core/packet-codec-sonic-rs"]
tower = [
  "dep:tower-layer",
  "dep:tower-service",
]

# Dependencies
[dependencies]
anyhow = "1.0.102"
arc-swap = "1.9.1"
futures-util = { version = "0.3.32", default-features = false }
http = "1.4.2"
http-body = "1.0.1"
hyper = "1.10.1"
hyper-util = { version = "0.1.20", features = ["tokio"] }
kikiutils = { version = "0.8.0", features = ["atomic-enum-cell", "fx-collections"] }
num_enum = "0.7.6"
parking_lot = "0.12.5"
roaring = "0.11.4"
serde = "1.0.228"
tokio = { version = "1.52.3", features = ["macros", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["handshake"] }
tokio-util = "0.7.18"
tower-layer = { version = "0.3.3", optional = true }
tower-service = { version = "0.3.3", optional = true }
url = "2.5.8"
wsio-core = { path = "../wsio-core", version = "0.12.6" }

# Target-specific dependencies
# [target.'cfg(unix)'.dependencies]
#
# [target.'cfg(windows)'.dependencies]
#
# [target.'cfg(target_arch = "wasm32")'.dependencies]

# Build dependencies
# [build-dependencies]

# Target-specific build dependencies
# [target.'cfg(unix)'.build-dependencies]

# Development dependencies
[dev-dependencies]
axum = { version = "0.8.9", features = ["ws"] }
criterion = { version = "0.8.2", features = ["async_tokio"] }
wsio-client = { path = "../wsio-client", features = ["full"] }
wsio-server = { path = "./", features = ["full"] }

# Target-specific development dependencies
# [target.'cfg(unix)'.dev-dependencies]

# Library target
# [lib]
# name = "crate_name"
# path = "src/lib.rs"
# crate-type = ["lib"]
# doctest = true

# Binary targets
# [[bin]]
# name = "crate-name"
# path = "src/main.rs"
# required-features = []

# Example targets
# [[example]]
# name = "example-name"
# path = "examples/example-name.rs"
# required-features = []

# Test targets
# [[test]]
# name = "integration"
# path = "tests/integration.rs"
# required-features = []

# Benchmark targets
[[bench]]
name = "server_realtime"
path = "benches/server_realtime.rs"
harness = false
required-features = []

# Optional build profiles. Prefer defining profiles at the workspace root.
# [profile.dev]
#
# [profile.release]
#
# [profile.test]
#
# [profile.bench]

# Optional dependency overrides. Prefer defining patches at the workspace root.
# [patch.crates-io]
#
# [replace]
