[package]
name = "client"

edition.workspace = true

# Dependencies
[dependencies]
anyhow.workspace = true
kikiutils.workspace = true
tikv-jemallocator.workspace = true
tokio.workspace = true
tracing.workspace = true
wsio-client.workspace = true

# Binaries
[[bin]]
name = "client"
path = "client.rs"

[[bin]]
name = "comprehensive-stress"
path = "comprehensive_stress.rs"

[[bin]]
name = "connection-stress"
path = "connection_stress.rs"
